# html_scraper

./: Cargo.toml  README.md
benches/: scraper_benchmark.rs
src/: cleaner.rs  error.rs  folder.rs  html_scraper.rs  html_scraper_mt.rs  lib.rs  old.rs  scraper_config.rs  visitor.rs  visitor_mt.rs
src/tests/data/: ilaks_news.html
tests/: test.rs
tests/data/: academic_article.html
