[package]
name = "html_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.20.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "1.0.63"
toml = { version = "0.5.8", features = ["preserve_order"], optional = true }

[features]
toml_config = ["toml"]
